--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/passport-new.jpg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="/assets/img/Lucy_photo.jpg" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
@@ -307,7 +307,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://www.intel.com/" target="_blank"><img alt="Intel logo"
-                    src="/assets/img/exp-zhiffy-logo-1.webp" class="responsive-img center-block" /></a>
+                    src="assets/img/intel-brand-portable.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -351,6 +351,9 @@
 
           <div class="col s12 m6 l4">
             <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="django web app" src="/assets/img/Deep-learning-for-computer-vision2.png" style="height: 100%; width: 100%" class="activator" />
+              </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Deep Learning Handwritten Math Scanner<i
                     class="mdi-navigation-more-vert right"></i></span>
