add place travelled

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
         <a aria-label="Open Lucy's resume in a new tab" href="https://github.com/Lucy-hi/Lucy-hi.github.io/blob/master/assets/resume/Ziyu%20Qu_IP%20Design_Resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
+      <li class="bold">
+        <!-- 
+        1. mdi-communication-contacts
+        2. mdi-content-mail
+        3. mdi-communication-email
+        -->
+        <a aria-label="Navigate to the Travel section" href="#travel" class="waves-effect waves-dark teal-text"><i
+            class="mdi-content-mail small"></i><span>Places Travelled</span></a>
+      </li>
     </ul>
   </nav>
 
@@ -587,6 +596,13 @@
               class="fa fa-linkedin"></i><a aria-label="Lucy on LinkedIn" href="http://linkedin.com/in/ziyu-qu"
               class="hoverline" target="_blank">linkedin.com/in/ziyu-qu</a></a>
         </p>
+      </div>
+    </section>
+
+    <section id="travel" class="section scrollspy">
+      <h3 class="page-title white-text teal">Places Travelled</h3>
+      <div class="container">
+        <iframe src="https://www.google.com/maps/d/embed?mid=1mRHEatB6QvXwbmBCzMj43lVZdsP8ao0&ehbc=2E312F" width="640" height="480"></iframe>
       </div>
     </section>
   </main>
