update map icon

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         3. mdi-communication-email
         -->
         <a aria-label="Navigate to the Travel section" href="#travel" class="waves-effect waves-dark teal-text"><i
-            class="mdi-content-mail small"></i><span>Places Travelled</span></a>
+            class="mdi-map small"></i><span>Places Travelled</span></a>
       </li>
     </ul>
   </nav>
@@ -205,6 +205,10 @@
         <a aria-label="Open Varad's Resume in a new tab"
           href="https://drive.google.com/file/d/15QrsnfQpvd3Jw2nbcbEJdVQl9g8g-Vpz/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
+      </li>
+      <li class="bold">
+        <a aria-label="Navigate to the Travel section" href="#travel" class="waves-effect waves-dark teal-text"><i
+            class="mdi-map small"></i><span>Places Travelled</span></a>
       </li>
     </ul>
   </nav>
