update map icon

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         3. mdi-communication-email
         -->
         <a aria-label="Navigate to the Travel section" href="#travel" class="waves-effect waves-dark teal-text"><i
-            class="mdi-map small"></i><span>Places Travelled</span></a>
+            class="mdi-maps-directions small"></i><span>Places Travelled</span></a>
       </li>
     </ul>
   </nav>
@@ -208,7 +208,7 @@
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Travel section" href="#travel" class="waves-effect waves-dark teal-text"><i
-            class="mdi-map small"></i><span>Places Travelled</span></a>
+            class="mdi-maps-directions small"></i><span>Places Travelled</span></a>
       </li>
     </ul>
   </nav>
