--- a/index.html
+++ b/index.html
@@ -359,8 +359,11 @@
     <!-- Fourth Section: Projects -->
     <section id="projects" class="section scrollspy">
       <h3 class="page-title white-text teal">Recent Projects</h3>
-      <div id="most_recent_project">
+      <div class="container">
+        <div id="most_recent_project" class="row"></div>
       </div>
+      <button id="load-more">Load More</button>
+      <script src="/assets/js/proj.js"></script>
     </section>
 
     <!-- Fifth Section: Skills -->
