add new image for projects

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
       <div class="container">
         <div id="most_recent_project" class="row"></div>
       </div>
-      <button id="load-more">Load More 12</button>
+      <button id="load-more">Load More</button>
       <script src="/assets/js/proj.js"></script>
     </section>
 
